--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 defusedxml==0.7.1
 diff-match-patch==20241021
 Django==5.2
+django-htmx==1.23.0
 django-import-export==4.3.7
 et_xmlfile==2.0.0
 numpy==2.2.5
