--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,20 @@
 asgiref==3.8.1
 defusedxml==0.7.1
 diff-match-patch==20241021
-Django==5.2
+Django==5.0.14
 django-htmx==1.23.0
 django-import-export==4.3.7
+django-mssql-backend==2.8.1
 et_xmlfile==2.0.0
+mssql-django==1.5
 numpy==2.2.5
 odfpy==1.4.1
 openpyxl==3.1.5
 pandas==2.2.3
+psycopg2-binary==2.9.10
+pyodbc==5.2.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
 pytz==2025.2
 PyYAML==6.0.2
 six==1.17.0
